Working on the Hybrid Model

--- a/8 - Benchmark Classification.ipynb
+++ b/8 - Benchmark Classification.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_initializer():\n",
     "    model_type = 'resnet'; model_size = '18'; num_classes = 5; model_name = model_type + model_size\n",
-    "    model = model_selection(model_name, num_classes, pretrained = False)\n",
+    "    model = model_selection(model_name, num_classes, pretrained = True)\n",
     "    model.conv1 = nn.Conv2d(1, 64, kernel_size = (7, 7), stride = (2, 2), padding = (3, 3), bias = False)\n",
     "    model = model.to(device)\n",
     "    return model\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,13 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'Resnet18 - Not Pretrained - 5 Classes - Adam'\n",
+    "name = 'Resnet18 - Pretrained - 5 Classes - Adam'\n",
     "\n",
-    "model, stats = kfold_train(Project, model_initializer, dataset, criterion, optimizer_initializer, num_epochs = 50, num_folds = 5, batch_size = batch_size, log_name = name)"
+    "model, stats = kfold_train(Project, model_initializer, dataset, criterion, optimizer_initializer, num_epochs = 30, num_folds = 5, batch_size = batch_size, log_name = name)"
    ]
   },
   {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = next(iter(dataloaders['train']))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,6 +246,11 @@
     "        super(HybridModel, self).__init__()\n",
     "        self.encoder = encoder\n",
     "        self.classifier = classifier\n",
+    "        \n",
+    "#     def normalize(self, X):\n",
+    "#         mean = torch.mean(X, dim = 3).unsqueeze(3).expand_as(X)\n",
+    "#         std  = torch.std(X, dim = 3).unsqueeze(3).expand_as(X)\n",
+    "#         return (X - mean)/std\n",
     "        \n",
     "    def forward(self, x):\n",
     "        with torch.set_grad_enabled(False):\n",
@@ -291,16 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Autoencoder(nn.Module):\n",
-    "    def __init__(self, stride, kernel_n, n_feature_maps = 3):\n",
+    "    def __init__(self, stride, kernel_n, dropout_p, n_feature_maps = 3):\n",
     "        super(Autoencoder, self).__init__()\n",
     "        n1 = kernel_n\n",
     "        s = stride\n",
     "        self.encoder = nn.Sequential(\n",
+    "            nn.Dropout2d(dropout_p),\n",
     "            nn.Conv2d(1, n_feature_maps, kernel_size = (1, 2*n1 + 1), padding = (0, n1), stride = (1, s)),\n",
     "            nn.ReLU(inplace = True),\n",
     "        )\n",
@@ -334,37 +349,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def autoencoder_initializer(kernel_n, stride, n_feature_maps):\n",
-    "    model = Autoencoder(kernel_n = kernel_n, stride = stride, n_feature_maps = n_feature_maps).to(device)\n",
+    "def autoencoder_initializer(kernel_n, stride, dropout_p, n_feature_maps):\n",
+    "    model = Autoencoder(kernel_n = kernel_n, stride = stride, dropout_p = dropout_p, n_feature_maps = n_feature_maps).to(device)\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hybrid_initializer():\n",
     "    classifier = model_selection(model_name, num_classes)\n",
     "    classifier.conv1 = nn.Conv2d(fm, 64, kernel_size = (7, 7), stride = (2, 2), padding = (3, 3), bias = False)\n",
+    "#     model.eval()\n",
     "    encoder = model.encoder\n",
+    "#     encoder.eval()\n",
     "    hybrid = HybridModel(classifier, encoder).to(device)\n",
     "    return hybrid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def optimizer_initializer(model):\n",
     "    return optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9)\n",
+    "#     return optim.Adam(model.parameters(), lr = 1e-3, weight_decay = 1e-5)\n",
     "\n",
     "def scheduler_initializer(optimizer):\n",
     "    return optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.5)"
@@ -377,18 +395,19 @@
    "outputs": [],
    "source": [
     "S = [1]\n",
-    "K = [1, 3, 5]\n",
-    "FM = [1, 3]\n",
+    "K = [1]\n",
+    "FM = [1]\n",
+    "DP = [0.1]\n",
     "model_type = 'resnet'; model_size = '18'; num_classes = 5; model_name = model_type + model_size\n",
     "\n",
-    "for (s, k, fm) in product(S, K, FM):\n",
+    "for (s, k, fm, dp) in product(S, K, FM, DP):\n",
     "    # Autoencoder Training\n",
-    "    model = Autoencoder(kernel_n = k, stride = s, n_feature_maps = fm).to(device)\n",
+    "    model = Autoencoder(kernel_n = k, stride = s, dropout_p = dp, n_feature_maps = fm).to(device)\n",
     "    criterion = nn.MSELoss()\n",
-    "    optimizer = optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9)\n",
+    "    optimizer = optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9, weight_decay = 1e-5)\n",
     "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.5)\n",
-    "    name = 'Autoencoder - s = {} k = {} fm = {} - 5 classes'.format(s, k, fm)\n",
-    "    model, stats = train_autoencoder(Project, model, dataloaders, dataset_sizes, criterion, optimizer, num_epochs = 60, log_name = name, scheduler = scheduler)\n",
+    "    name = '50 folds - Autoencoder - s = {} k = {} fm = {} dp = {} - 5 classes'.format(s, k, fm, dp)\n",
+    "    model, stats = train_autoencoder(Project, model, dataloaders, dataset_sizes, criterion, optimizer, num_epochs = 50, log_name = name, scheduler = scheduler)\n",
     "    \n",
     "    with open('Outputs/'+name+' - stats', 'wb') as stats_file:\n",
     "        pickle.dump(stats, stats_file)\n",
@@ -396,8 +415,8 @@
     "    # Classifier training\n",
     "\n",
     "    criterion = nn.CrossEntropyLoss()\n",
-    "    name = 'ResNet50 - N-TL - ' + name\n",
-    "    hybrid, stats = kfold_train(Project, hybrid_initializer, dataset, criterion, optimizer_initializer, num_epochs = 30, num_folds = 5, log_name = name)\n",
+    "    name = '50 folds - ResNet50 - N-TL - ' + name\n",
+    "    hybrid, stats = kfold_train(Project, hybrid_initializer, dataset, criterion, optimizer_initializer, num_epochs = 60, num_folds = 5, log_name = name)\n",
     "    \n",
     "    with open('Outputs/'+name+' - stats', 'wb') as stats_file:\n",
     "        pickle.dump(stats, stats_file)\n",
