--- a/7 - Benchmark Dataset (40 Classes 35 Indv).ipynb
+++ b/7 - Benchmark Dataset (40 Classes 35 Indv).ipynb
@@ -77,7 +77,7 @@
     "# path = Project.tsinghua_raw_dir / 'benchmark' / 'separated'\n",
     "path = Path('D:/Datasets/Tsinghua/Raw/benchmark/separated')\n",
     "new_path = Project.tsinghua_raw_dir / 'benchmark' / 'separated_500'\n",
-    "for t in range(1, 40 + 1):\n",
+    "for t in range(1, 5 + 1):\n",
     "# for t in [1]:\n",
     "    (new_path / str(t)).mkdir(parents = True, exist_ok = True)\n",
     "    files = os.listdir(path / str(t))\n",
@@ -87,9 +87,15 @@
     "        X1 = X[:500, :]\n",
     "        X2 = X[500:1000, :]\n",
     "        X3 = X[1000:, :]\n",
+    "#         X4 = X[750:1000, :]\n",
+    "#         X5 = X[1000:1250, :]\n",
+    "#         X6 = X[1250:, :]\n",
     "        np.savetxt(new_path / str(t) / (file_identifier + \"_1.csv\"), X1)\n",
     "        np.savetxt(new_path / str(t) / (file_identifier + \"_2.csv\"), X2)\n",
     "        np.savetxt(new_path / str(t) / (file_identifier + \"_3.csv\"), X3)\n",
+    "#         np.savetxt(new_path / str(t) / (file_identifier + \"_4.csv\"), X4)\n",
+    "#         np.savetxt(new_path / str(t) / (file_identifier + \"_5.csv\"), X5)\n",
+    "#         np.savetxt(new_path / str(t) / (file_identifier + \"_6.csv\"), X6)\n",
     "#         os.remove(path / str(t) / file)"
    ]
   },
