--- a/8 - Benchmark Classification.ipynb
+++ b/8 - Benchmark Classification.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,20 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'train': 2448, 'val': 612}\n"
+      "{'train': 1632, 'val': 408}\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 64\n",
-    "signal_length = 500\n",
+    "batch_size = 32\n",
+    "signal_length = 1000\n",
     "dataset = BenchmarkDataset(Project, signal_length, classes = list(range(1, 5 + 1)))\n",
     "dataloaders, dataset_sizes = Dataloader(dataset, batch_size)\n",
     "print(dataset_sizes)"
@@ -82,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_initializer():\n",
-    "    model_type = 'resnet'; model_size = '18'; num_classes = 5; model_name = model_type + model_size\n",
+    "    model_type = 'resnet'; model_size = '18'; num_classes = 40; model_name = model_type + model_size\n",
     "    model = model_selection(model_name, num_classes, pretrained = True)\n",
     "    model.conv1 = nn.Conv2d(1, 64, kernel_size = (7, 7), stride = (2, 2), padding = (3, 3), bias = False)\n",
     "    model = model.to(device)\n",
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,13 +121,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'Resnet18 - Pretrained - 5 Classes - Adam'\n",
+    "sample = next(iter(dataloaders['train']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 6, 34, 10, 26, 15, 28,  2, 21,  8, 32,  9, 14, 39, 27,  2, 23, 17, 31,\n",
+       "        15, 38, 24, 32, 12, 18, 17, 14, 33,  3, 36,  9, 27, 22])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'Resnet18 - Pretrained - {} Classes - Adam - {} - Individual {}'.format(5, 500, 1)\n",
     "\n",
-    "model, stats = kfold_train(Project, model_initializer, dataset, criterion, optimizer_initializer, num_epochs = 30, num_folds = 5, batch_size = batch_size, log_name = name)"
+    "model, stats = kfold_train(Project, model_initializer, dataset, criterion, optimizer_initializer, num_epochs = 50, num_folds = 5, batch_size = batch_size, log_name = name)"
    ]
   },
   {
@@ -143,18 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def autoencoder_initializer(kernel_n, stride, n_feature_maps):\n",
-    "    model = Autoencoder(kernel_n = kernel_n, stride = stride, n_feature_maps = n_feature_maps).to(device)\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -164,28 +192,28 @@
       "----------------------------------------------------------------\n",
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
-      "            Conv2d-1           [-1, 3, 64, 500]              12\n",
-      "            Conv2d-2           [-1, 1, 64, 250]              10\n",
+      "         Dropout2d-1          [-1, 1, 64, 1000]               0\n",
+      "            Conv2d-2           [-1, 1, 64, 250]               4\n",
       "              ReLU-3           [-1, 1, 64, 250]               0\n",
       "         MaxPool2d-4  [[-1, 1, 64, 125], [-1, 1, 64, 125]]               0\n",
       "       BatchNorm2d-5           [-1, 1, 64, 125]               2\n",
       "       MaxUnpool2d-6           [-1, 1, 64, 250]               0\n",
-      "   ConvTranspose2d-7           [-1, 1, 64, 500]               4\n",
+      "   ConvTranspose2d-7          [-1, 1, 64, 1000]               4\n",
       "================================================================\n",
-      "Total params: 28\n",
-      "Trainable params: 28\n",
+      "Total params: 10\n",
+      "Trainable params: 10\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
-      "Input size (MB): 0.12\n",
+      "Input size (MB): 0.24\n",
       "Forward/backward pass size (MB): 486.88\n",
       "Params size (MB): 0.00\n",
-      "Estimated Total Size (MB): 487.00\n",
+      "Estimated Total Size (MB): 487.12\n",
       "----------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "model = autoencoder_initializer(1, 2, 1)\n",
+    "model = autoencoder_initializer(1, 4, 0., 1)\n",
     "summary(model, (1, 64, int(signal_length)))"
    ]
   },
@@ -237,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +274,7 @@
     "        super(HybridModel, self).__init__()\n",
     "        self.encoder = encoder\n",
     "        self.classifier = classifier\n",
-    "        \n",
+    "        self.encoder.eval()\n",
     "#     def normalize(self, X):\n",
     "#         mean = torch.mean(X, dim = 3).unsqueeze(3).expand_as(X)\n",
     "#         std  = torch.std(X, dim = 3).unsqueeze(3).expand_as(X)\n",
@@ -305,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,28 +388,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hybrid_initializer():\n",
     "    classifier = model_selection(model_name, num_classes)\n",
     "    classifier.conv1 = nn.Conv2d(fm, 64, kernel_size = (7, 7), stride = (2, 2), padding = (3, 3), bias = False)\n",
-    "#     model.eval()\n",
     "    encoder = model.encoder\n",
-    "#     encoder.eval()\n",
     "    hybrid = HybridModel(classifier, encoder).to(device)\n",
     "    return hybrid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def optimizer_initializer(model):\n",
-    "    return optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9)\n",
+    "    return optim.SGD(model.classifier.parameters(), lr = 1e-3, momentum = 0.9)\n",
     "#     return optim.Adam(model.parameters(), lr = 1e-3, weight_decay = 1e-5)\n",
     "\n",
     "def scheduler_initializer(optimizer):\n",
@@ -390,14 +416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "S = [1]\n",
+    "S = [2, 4]\n",
     "K = [1]\n",
-    "FM = [1]\n",
-    "DP = [0.1]\n",
+    "FM = [1, 3]\n",
+    "DP = [0]\n",
     "model_type = 'resnet'; model_size = '18'; num_classes = 5; model_name = model_type + model_size\n",
     "\n",
     "for (s, k, fm, dp) in product(S, K, FM, DP):\n",
@@ -406,7 +432,7 @@
     "    criterion = nn.MSELoss()\n",
     "    optimizer = optim.SGD(model.parameters(), lr = 1e-3, momentum = 0.9, weight_decay = 1e-5)\n",
     "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 10, gamma = 0.5)\n",
-    "    name = '50 folds - Autoencoder - s = {} k = {} fm = {} dp = {} - 5 classes'.format(s, k, fm, dp)\n",
+    "    name = '1000 - Autoencoder - s = {} k = {} fm = {} dp = {} - 5 classes'.format(s, k, fm, dp)\n",
     "    model, stats = train_autoencoder(Project, model, dataloaders, dataset_sizes, criterion, optimizer, num_epochs = 50, log_name = name, scheduler = scheduler)\n",
     "    \n",
     "    with open('Outputs/'+name+' - stats', 'wb') as stats_file:\n",
@@ -415,8 +441,8 @@
     "    # Classifier training\n",
     "\n",
     "    criterion = nn.CrossEntropyLoss()\n",
-    "    name = '50 folds - ResNet50 - N-TL - ' + name\n",
-    "    hybrid, stats = kfold_train(Project, hybrid_initializer, dataset, criterion, optimizer_initializer, num_epochs = 60, num_folds = 5, log_name = name)\n",
+    "    name = 'ResNet50 - TL - ' + name\n",
+    "    hybrid, stats = kfold_train(Project, hybrid_initializer, dataset, criterion, optimizer_initializer, num_epochs = 50, num_folds = 5, log_name = name)\n",
     "    \n",
     "    with open('Outputs/'+name+' - stats', 'wb') as stats_file:\n",
     "        pickle.dump(stats, stats_file)\n",
