--- a/6 - BETA Dataset (40 classes 70 Indv).ipynb
+++ b/6 - BETA Dataset (40 classes 70 Indv).ipynb
@@ -136,6 +136,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getData(path):\n",
+    "    subject = scipy.io.loadmat(path)['data'][0][0]\n",
+    "    return subject[0], subjectInfo(subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_path = 'D:\\\\Datasets\\\\Tsinghua\\\\beta\\\\S1.mat'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = scipy.io.loadmat(input_path)['data'][0][0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 750, 4, 40)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 750, 40, 4)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data..shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 1500, 40, 6)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_path = 'D:\\\\Datasets\\\\Tsinghua\\\\benchmark\\\\S1.mat'\n",
+    "scipy.io.loadmat(input_path)['data'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
@@ -305,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
