--- a/Tsinghua Dataset Processing.ipynb
+++ b/Tsinghua Dataset Processing.ipynb
@@ -17,20 +17,22 @@
    "outputs": [],
    "source": [
     "from Scripts.data.TsinghuaProcessing import *\n",
+    "from Scripts.data.TsinghuaDataset import Dataset\n",
+    "\n",
     "from Project import Project   \n",
     "import ray"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-14 09:36:23,139\tINFO services.py:1267 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
+      "2021-05-17 07:18:07,349\tINFO services.py:1267 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
      ]
     },
     {
@@ -39,15 +41,15 @@
        "{'node_ip_address': '192.168.15.141',\n",
        " 'raylet_ip_address': '192.168.15.141',\n",
        " 'redis_address': '192.168.15.141:6379',\n",
-       " 'object_store_address': 'tcp://127.0.0.1:61380',\n",
-       " 'raylet_socket_name': 'tcp://127.0.0.1:63097',\n",
+       " 'object_store_address': 'tcp://127.0.0.1:58383',\n",
+       " 'raylet_socket_name': 'tcp://127.0.0.1:65311',\n",
        " 'webui_url': '127.0.0.1:8265',\n",
-       " 'session_dir': 'C:\\\\Users\\\\olipp\\\\AppData\\\\Local\\\\Temp\\\\ray\\\\session_2021-05-14_09-36-19_951315_9804',\n",
-       " 'metrics_export_port': 62781,\n",
-       " 'node_id': 'a1d0d9210b95ef6e65e850b518a19bf5970000becf1f80484050db38'}"
+       " 'session_dir': 'C:\\\\Users\\\\olipp\\\\AppData\\\\Local\\\\Temp\\\\ray\\\\session_2021-05-17_07-18-01_728410_1456',\n",
+       " 'metrics_export_port': 60638,\n",
+       " 'node_id': '5257b738069b645462a091813a6528c65ce094b92bccc123562eafe3'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,9 +66,14 @@
     "\n",
     "1. \\[ X \\]. Extrair os dados dos arquivos _.mat_ originais, salvando-os como _.csv_ separados por classe e identificados por indivíduo e bloco.\n",
     "2. \\[ X \\]. Recortar as séries separadas em tamanhos ajustáveis.\n",
-    "3. \\[   \\]. Definir as classes dos datasets. Uma classe para cada um, uma classe reunindo os dois.\n",
+    "3. \\[ X \\]. Definir as classes dos datasets. Uma classe para cada um, uma classe reunindo os dois.\n",
     "\n",
-    "Os ítens 1 e 2 podem ser feitos em paralelo, com a classe multiprocessing.Pool. "
+    "Os ítens 1 e 2 podem ser feitos em paralelo, com a classe multiprocessing.Pool.\n",
+    "\n",
+    "__To do:__\n",
+    "\n",
+    "3.1 \\[ \\]. Testar meios de paralelizar a criação dos datasets.\n",
+    "3.2 \\[ \\]. Modificar a classe dos datasets para trabalhar com endereços de arquivos (para possibilitar o uso dos datas) "
    ]
   },
   {
@@ -89,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +105,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "splitDataset('beta', Project.tsinghua.__str__(), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = Dataset('beta', Project, 250, [*range(1, 5 + 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4200"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)"
    ]
   }
  ],
