--- a/Tsinghua Dataset Processing.ipynb
+++ b/Tsinghua Dataset Processing.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-17 07:18:07,349\tINFO services.py:1267 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
+      "2021-05-17 12:19:06,578\tINFO services.py:1267 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
      ]
     },
     {
@@ -41,15 +41,15 @@
        "{'node_ip_address': '192.168.15.141',\n",
        " 'raylet_ip_address': '192.168.15.141',\n",
        " 'redis_address': '192.168.15.141:6379',\n",
-       " 'object_store_address': 'tcp://127.0.0.1:58383',\n",
-       " 'raylet_socket_name': 'tcp://127.0.0.1:65311',\n",
+       " 'object_store_address': 'tcp://127.0.0.1:61255',\n",
+       " 'raylet_socket_name': 'tcp://127.0.0.1:61469',\n",
        " 'webui_url': '127.0.0.1:8265',\n",
-       " 'session_dir': 'C:\\\\Users\\\\olipp\\\\AppData\\\\Local\\\\Temp\\\\ray\\\\session_2021-05-17_07-18-01_728410_1456',\n",
-       " 'metrics_export_port': 60638,\n",
-       " 'node_id': '5257b738069b645462a091813a6528c65ce094b92bccc123562eafe3'}"
+       " 'session_dir': 'C:\\\\Users\\\\olipp\\\\AppData\\\\Local\\\\Temp\\\\ray\\\\session_2021-05-17_12-19-03_552350_2428',\n",
+       " 'metrics_export_port': 62461,\n",
+       " 'node_id': '88d9e8e1da103b0074bc4c471fbb184139e94e976ca8f9e85edc7ed5'}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,8 +72,8 @@
     "\n",
     "__To do:__\n",
     "\n",
-    "3.1 \\[ \\]. Testar meios de paralelizar a criação dos datasets.\n",
-    "3.2 \\[ \\]. Modificar a classe dos datasets para trabalhar com endereços de arquivos (para possibilitar o uso dos datas) "
+    "- 3.1 \\[ \\]. Testar meios de paralelizar a criação dos datasets.\n",
+    "- 3.2 \\[ \\]. Modificar a classe dos datasets para trabalhar com endereços de arquivos (para possibilitar o uso dos datasets completos). "
    ]
   },
   {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,6 +148,55 @@
    ],
    "source": [
     "len(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class subjectInfo():\n",
+    "#     def __init__(self, subject):\n",
+    "#         self.data = [x for x in subject[1][0][0]]\n",
+    "        \n",
+    "#     def getID(self):\n",
+    "#         return self.data[0].item()\n",
+    "    \n",
+    "#     def getAge(self):\n",
+    "#         return self.data[1].item()\n",
+    "        \n",
+    "#     def getGender(self):\n",
+    "#         return self.data[2].item()\n",
+    "        \n",
+    "#     def getElectrodes(self):\n",
+    "#         electrodes_id = list(range(1, 65))\n",
+    "#         data = pd.DataFrame(index = list(range(1, 65)), columns = ['Name', 'x', 'y'])\n",
+    "#         for i in range(64):\n",
+    "#             d = self.data[3][i][1].astype(np.float64).item()\n",
+    "#             r = self.data[3][i][2].astype(np.float64).item()\n",
+    "#             name = self.data[3][i][3].item()\n",
+    "#             data.loc[i+1] = [name, x, y]\n",
+    "            \n",
+    "#         return data\n",
+    "        \n",
+    "#     def getFrequencies(self):\n",
+    "#         return self.data[4][0]\n",
+    "    \n",
+    "#     def getPhases(self):\n",
+    "#         return self.data[5][0]\n",
+    "    \n",
+    "#     def getVal1(self):\n",
+    "#         return self.data[6][0]\n",
+    "        \n",
+    "#     def getVal2(self):\n",
+    "#         return self.data[7][0]\n",
+    "        \n",
+    "#     def getVal3(self):\n",
+    "#         return self.data[8][0]\n",
+    "        \n",
+    "#     def getSamplingRate(self):\n",
+    "#         return self.data[9][0]"
    ]
   }
  ],
